fixxed the tts overflow and added intecator for when the ai is responding

--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,8 @@ body{
     min-height: 100vh;
     padding-top: 0px;
     padding-bottom: 0px;
-    width: 100vw;
+    width: 100%;
+    box-sizing: border-box;
     margin: 0px;
 }
 *:focus {
@@ -19,6 +20,7 @@ body{
     top: 0px;
     color: aliceblue;
     font-family: Bruno Ace;
+    padding: 0.5em 1em;
 }
 .input-section{
     position: fixed;
@@ -117,4 +119,17 @@ input,textarea{
 }
 .pre-wrap{
     white-space: pre-wrap;
+}
+/* Status row showing time until reply */
+.status-row{
+    display: flex;
+    margin-top: 1em;
+    width: 100%;
+    flex-direction: row;
+    justify-content: start;
+}
+.status-text{
+    color: #cfd8dc;
+    font-size: 0.9rem;
+    font-family: Roboto, Arial, Helvetica, sans-serif;
 }
